# CardputerZero-NC2000

./: CMakeLists.txt  README.md  app-builder.json  key.cpp  key.h  main.cpp  nand.cpp  nand.h  nc2000.cpp  nc2000.h  rom.cpp
.github/workflows/: build-deb.yml
ansi/: w65c02op.cpp
cardputer/: nc2000-launch.sh  nc2000.desktop
dsp/: dsp.h
lcdstripe/: lcdpainter.cpp
packaging/: build_deb.sh  gen_splash.py  publish_firmware.sh
port_fb/: CMakeLists.txt  console_stub.cpp  display_fb.cpp  input_fb.cpp  lcdpainter_stub.cpp  main_fb.cpp  sound_stub.cpp  wqx_remote_key.py
port_fb/SDL2/: SDL.h  SDL_timer.h
port_fb/lcdstripe/: lcdpainter.h
port_lvgl/: README.md  main_lvgl.cpp
roms/: nc2000.nand0  nc2000.nor
src/: NekoDriverIO.cpp  NekoDriverIO.h  comm.cpp  comm.h  cpu_loop.cpp  cpu_loop_new.cpp  display.cpp  display.h  key_new.cpp  mem.cpp  nor.cpp  nor.h  sound.cpp  state.h
src/ansi/: w65c02.h  w65c02cpu.cpp
src/lcdstripe/: lcdpainter.h
